# Subtitle-Renamer

./: Makefile  README.md  TODO  main.py  pyproject.toml  rename.py  setup.sh
.github/workflows/: makefile.yml
src/subtitle-renamer/: __main__.py  main.py  regexps.py  scan.py  settings.py
src/subtitle_renamer/: main.py  regexps.py  rename.py  requirements.txt  scan.py  settings.py
src/subtitle_renamer/tests/: tests.py
