[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "subtitle-renamer"
version = "0.9.0"
authors = [
  { name="makiwara-fr", email="" },
]
description = "Rename all subtitles in one shot"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.scripts]
subtitle-renamer = "main:main"




[project.urls]
"Homepage" = ""
"Bug Tracker" = ""
